sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:26: error: ';' expected but 'while' found.
		}while(inverse)
                 ^AlgCocktailSort1:41: error: 'while' expected but '}' found.
}
^